fixed table scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,13 @@ body {
   padding: 0;
   margin-bottom: 200px;
   width: 100%;
+  min-width: 800px;
 }
 
 @media only screen and (min-width: 600px) {
   .innerContainer {
     padding: 0 24px;
-    max-width: 700px;
+    min-width: 800px;
   }
 }
 
