--- a/src/pages/styles.module.scss
+++ b/src/pages/styles.module.scss
@@ -9,6 +9,7 @@
   margin-top: 48px;
   border-collapse: collapse;
   width: 100%;
+  min-width: 700px;
   tr {
     border-top: 1px solid #dedede;
     border-width: 1px 0px;
